--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.svg" />
+    <!-- <link rel="icon"  href="./favicon.ico" /> -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2220%22 fill=%22%23ff9900%22></rect><path d=%22M68.13 36.41L68.13 36.41Q68.13 40.28 66.29 43.56Q64.44 46.85 60.13 48.65L60.13 48.65Q65.25 50.36 67.78 54.00Q70.30 57.65 70.30 62.24L70.30 62.24Q70.30 70.43 64.40 74.39Q58.50 78.35 47.61 78.35L47.61 78.35Q43.84 78.35 40.28 78.03Q36.73 77.72 33.48 76.82L33.48 76.82Q29.70 75.74 29.70 72.68L29.70 72.68L29.70 26.60Q29.70 23.99 32.67 23.18L32.67 23.18Q35.73 22.28 39.16 21.97Q42.58 21.65 46.63 21.65L46.63 21.65Q56.80 21.65 62.46 25.25Q68.13 28.85 68.13 36.41ZM49.14 51.89L36.91 51.89L36.91 71.33Q39.06 71.78 41.90 72.05Q44.73 72.32 47.61 72.32L47.61 72.32Q55.09 72.32 58.95 69.84Q62.82 67.37 62.82 62.06L62.82 62.06Q62.82 57.38 59.36 54.64Q55.89 51.89 49.14 51.89L49.14 51.89ZM36.91 28.49L36.91 45.95L49.14 45.95Q54.81 45.95 57.74 43.43Q60.66 40.91 60.66 36.59L60.66 36.59Q60.66 27.68 46.63 27.68L46.63 27.68Q43.47 27.68 41.18 27.91Q38.88 28.13 36.91 28.49L36.91 28.49Z%22 fill=%22%23fff%22></path></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#8553fa" />
-    <meta
-      name="description"
-      content="Essence - an e-commerce store for selling perfumes"
-    />
+    <meta name="description" content="BestDeal.today - Your premier destination for top-rated tech products available on Amazon, including VR, Apple, Mac, iPhone, Samsung, and cutting-edge hardware technology." />
+<!-- Microsoft Track -->
+<script type="text/javascript">
+  (function(c,l,a,r,i,t,y){
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+  })(window, document, "clarity", "script", "ky7mtt714g");
+</script>
 
-    <!-- Font Awesome -->
+
+
+
+
+<!-- Font Awesome -->
     <script
       src="https://kit.fontawesome.com/0e889649eb.js"
       crossorigin="anonymous"
     ></script>
-
-    <title>Essence Store</title>
+    <title>BestDeal.today - Your Source for VR, Apple, Mac, iPhone, Samsung, and More on Amazon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
